@@ -52,9 +52,9 @@
         <surefire.version>3.0.0-M3</surefire.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
-        <mockito.version>2.25.1</mockito.version>
-        <spring.version>5.1.5.RELEASE</spring.version>
-        <formatter-maven-plugin.version>2.8.1</formatter-maven-plugin.version>
+        <mockito.version>2.27.0</mockito.version>
+        <spring.version>5.1.7.RELEASE</spring.version>
+        <formatter-maven-plugin.version>2.9.0</formatter-maven-plugin.version>
         <graalvm.version>19.0.0</graalvm.version>
     </properties>
     <dependencyManagement>
@@ -204,7 +204,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.3</version>
+                <version>0.8.4</version>
                 <executions>
                     <execution>
                         <id>agent</id>
@@ -223,10 +223,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.10</source>
-                    <target>1.10</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -234,7 +233,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <forkCount>0</forkCount>
+                    <argLine>--add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
                 </configuration>
             </plugin>
         </plugins>
